@@ -91,8 +91,8 @@
 </target>
 <target name="cmake" path="build" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
 <buildCommand>cmake</buildCommand>
-<buildArguments>VERBOSE=1</buildArguments>
-<buildTarget>.. -DCMAKE_BUILD_TYPE=debug -DCMAKE_CXX_FLAGS='-W -Wall' -DENABLE_PCH=0 -DSTATIC_DRUMSTICK=1 -DCMAKE_INSTALL_PREFIX=/usr/local</buildTarget>
+<buildArguments>-DCMAKE_BUILD_TYPE=debug -DCMAKE_CXX_FLAGS='-W -Wall' -DENABLE_PCH=0 -DSTATIC_DRUMSTICK=1 -DCMAKE_INSTALL_PREFIX=/usr/local</buildArguments>
+<buildTarget>..</buildTarget>
 <stopOnError>false</stopOnError>
 <useDefaultCommand>false</useDefaultCommand>
 <runAllBuilders>true</runAllBuilders>
