@@ -1,11 +1,3 @@
-Done:
-    * Migrate KMidimon and KMetronome to KDE4 and this library
-    * Documentation
-    * Public release
-
-Planned:
-    * More test cases
-
 Functions from ALSA library reported by chkcoverage.
 The following functions won't be used in drumstick.  
 
