@@ -13,7 +13,7 @@ ENDIF(USE_PCH)
 TARGET_LINK_LIBRARIES(drumstick-sysinfo
     ${QT_LIBRARIES} 
     ${ALSA_LIBS} 
-    drumstick
+    drumstick-alsa
 )
 
 INSTALL(TARGETS drumstick-sysinfo 
