@@ -2,6 +2,6 @@ TEMPLATE = app
 TARGET = drumstick-sysinfo
 INCLUDEPATH += . ../../library/include
 DEPENDPATH += . ../../library ../../library/include
-LIBS = -L../../library -ldrumstick  -lasound
+LIBS = -L../../library -ldrumstick-alsa  -lasound
 # Input
 SOURCES += sysinfo.cpp
